reCreated the backend

--- a/calculator.html
+++ b/calculator.html
@@ -46,7 +46,7 @@
     </div>
     </div>
     <script>
-        /*const sum = function (...args) {
+        const sum = function (...args) {
   return args.reduce(
     (previousSum, currentValue) => previousSum + currentValue,
     0
@@ -69,120 +69,55 @@ const division = function (...args) {
   return args.reduce(
     (previousNumber, currentValue) => previousNumber / currentValue
   );
-};*/
+};
 
-//const result = document.querySelector("#result");
-/*result.textContent = 0;*/
-/*const number_7 = document.querySelector("#7");
-const number_8 = document.querySelector("#8");
-const number_9 = document.querySelector("#9");
-const divide_element = document.querySelector("#/");
-const number_4 = document.querySelector("#4");
-const number_5 = document.querySelector("#5");
-const number_6 = document.querySelector("#6");
-const multiplication_element = document.querySelector("#*");
-const number_1 = document.querySelector("#1");
-const number_2 = document.querySelector("#2");
-const number_3 = document.querySelector("#3");
-const subtraction_element = document.querySelector("#-");
-const period = document.querySelector("#.");
-const number_0 = document.querySelector("#0");
-const equals_element = document.querySelector("#=");
-const addition_element = document.querySelector("#+");*/
+const finalResult = document.querySelector("#result");
 
-//let resultNumbers = '0';
-
-/*function solveExpression(){
-    if(resultNumbers.includes('+')){
-      const Numbers = resultNumbers.split('+').map(Number);
-        resultNumbers = sum(...Numbers);
-    }
-    else if(resultNumbers.includes('-')){
-      const Numbers = resultNumbers.split('-').map(Number);
-        resultNumbers = difference(...Numbers);
-    }
-    else if(resultNumbers.includes('*')){
-      const Numbers = resultNumbers.split('*').map(Number);
-        resultNumbers = multiplication(...Numbers);
-    }
-    else if(resultNumbers.includes('/')){
-      const Numbers = resultNumbers.split('/').map(Number);
-        resultNumbers = division(...Numbers);
-    }
-}*/
-/*function solveExpression() {
-  let result = 0;
-  let currentOperator = "+";
-  let currentNumber = "";
-
-  for (let i = 0; i < resultNumbers.length; i++) {
-    const char = resultNumbers[i];
-
-    if (char === "+" || char === "-" || char === "*" || char === "/") {
-      if (currentNumber !== "") {
-        const number = parseFloat(currentNumber);
-
-        switch (currentOperator) {
-          case "+":
-            result += number;
-            break;
-          case "-":
-            result -= number;
-            break;
-          case "*":
-            result *= number;
-            break;
-          case "/":
-            result /= number;
-            break;
-        }
-
-        currentNumber = "";
-      }
-
-      currentOperator = char;
-    } else {
-      currentNumber += char;
-    }
-  }
-
-  if (currentNumber !== "") {
-    const number = parseFloat(currentNumber);
-
-    switch (currentOperator) {
-      case "+":
-        result += number;
-        break;
-      case "-":
-        result -= number;
-        break;
-      case "*":
-        result *= number;
-        break;
-      case "/":
-        result /= number;
-        break;
-    }
-  }
-
-  resultNumbers = result.toString();
-}
-
-function Press(e){
-  const selectTarget = e.target;
-  const currentContent = selectTarget.textContent;
-  if(currentContent === '='){
-    solveExpression(); 
-  }
-  else{
-    resultNumbers += currentContent; 
-  }
-    result.textContent = resultNumbers;
-}
 const allButtons = document.querySelectorAll(".clickButtons");
 allButtons.forEach(function (button) {
-  button.addEventListener("click", Press);
-});*/
+  button.addEventListener('click', Press);
+});
+
+let initialResult = '';
+
+function Press(e){
+  let selectTarget = e.target;
+  let intoResult = selectTarget.textContent;
+
+  if(intoResult === '='){
+    solveExpression();
+  }
+  else{
+    initialResult += intoResult;
+    finalResult.textContent = initialResult;
+  }
+};
+
+
+
+function solveExpression(){
+  let anotherResult;
+  if(initialResult.includes('+')){
+    const splitAddNumbers = initialResult.split('+').map(Number);
+    anotherResult = sum(...splitAddNumbers);
+  }
+  else if(initialResult.includes('-')){
+    const splitDifferenceNumbers = initialResult.split('-').map(Number);
+    anotherResult = difference(...splitDifferenceNumbers);
+  }
+  else if(initialResult.includes('*')){
+    const splitMultiplyNumbers = initialResult.split('*').map(Number);
+    anotherResult = multiplication(...splitMultiplyNumbers);
+  }
+  else if(initialResult.includes('/')){
+    const splitDivisionNumbers = initialResult.split('/').map(Number);
+    anotherResult = division(...splitDivisionNumbers);
+  }
+  if (anotherResult !== undefined) {
+    initialResult = anotherResult;
+    finalResult.textContent = initialResult;
+  }
+};
 
     </script>
 </body>
